readjusted card sizes on mobile viewport and header fix

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,9 +1,15 @@
 .ui.special.cards {
-    padding-top: 5em;
-    padding-left: 8em;
-    padding-right: 8em;
+    padding: 3em 8em 3em 8em;
     overflow: auto;
 }
 .list-buy {
     padding-top: 5em;  
+}
+
+@media only screen and (max-width: 700px) {
+    .ui.special.cards {
+        padding: 5em 5em 5em 5em;
+        overflow: auto;
+        text-align: center;
+    }
 }
